2020-11-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Update to use resource-limit
	respecting memory allocators.

	* magick/render.c (DrawImage): Update to use resource-limit
	respecting memory allocators.

	* magick/memory.c (_MagickReallocateResourceLimitedMemory): Add
	new private interfaces for allocating private memory while
	respecting resource limits.

2020-10-25  Bob Friesenhahn  <bfriesen@bobsdell>

	* magick/render.c (DrawImage): Reject pattern image with a
	dimension of zero.  Fixes oss-fuzz issue 26382
	"graphicsmagick:coder_MVG_fuzzer: Floating-point-exception in
	DrawPrimitive".

2020-10-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (ConstituteImage): Set image depth
	appropriately based on the storage size specified by StorageType
	and QuantumDepth.

2020-10-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawPrimitive): Use DestroyImageList() to
	destroy composite_image since it may be a list.  Fixes oss-fuzz
	25247 "Indirect-leak in MagickMalloc".
	(DrawPrimitive): Add ImageInfo properties to request only
	returning the first frame if the in-line image is a list.  Also,
	add a missing DestroyImageList() request if multiple-frames were
	returned.

	* magick/transform.c (TransformImage): Use ReplaceImageInList()
	replace transformed image in list.

	* magick/list.c (ReplaceImageInList): Remove previous and next
	references from removed image before destroying it.

	* magick/render.c (DrawClipPath): Remove break statement so that
	added clip-mask image is initialized properly and rendered-on as
	expected.  Thanks to László Böszörményi for reporting this problem
	prior to release.

2020-10-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac (AC_PROG_CC_STDC): AC_PROG_CC_STDC is no longer
	required since AC_PROG_CC now provides its useful function.
	AC_PROG_CC_STDC is marked as obsolete after Autoconf 2.69.
	Quote all arguments to m4 macros.