@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020201107"
-#define public MagickPackageReleaseDate "snapshot-20201107"
+#define public MagickPackageVersionAddendum ".020201108"
+#define public MagickPackageReleaseDate "snapshot-20201108"
