@@ -1,3 +1,8 @@
+2020-11-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/miff.c (WriteMIFFImage): Update to use resource-limit
+	respecting memory allocators.
+
 2020-11-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/miff.c (ReadMIFFImage): Update to use resource-limit
